sites/_shared/assets/base.css
/* ... */
.no-js:not(html) {
  display: none !important;
}

html.no-js .no-js:not(html) {
  display: block !important;
}

.no-js-inline {
  display: none !important;
}

html.no-js .no-js-inline {
  display: inline-block !important;
}

html.no-js .no-js-hidden {
  display: none !important;
}

.page-width {
  max-width: var(--page-width);
  margin: 0 auto;
  padding: 0 2rem;
}

.page-width-desktop {
  padding: 0;
  margin: 0 auto;
}

@media screen and (min-width: 750px) {
  .page-width {
    padding: 0 5rem;
  }

  .page-width--narrow {
    padding: 0 9rem;
  }

  .page-width-desktop {
    padding: 0;
  }

  .page-width-tablet {
    padding: 0 5rem;
  }
}

@media screen and (min-width: 990px) {
  .page-width--narrow {
    max-width: 82.75rem;
    padding: 0;
  }

  .page-width-desktop {
    max-width: var(--page-width);
    padding: 0 5rem;
  }
}

.element-margin {
  margin-top: 5rem;
}

.spaced-section {
  margin-top: 5rem;
}

.spaced-section:last-child {
  margin-bottom: 5rem;
}

@media screen and (min-width: 750px) {
  .element-margin {
    margin-top: calc(5rem + var(--page-width-margin));
  }

  .spaced-section {
    margin-top: calc(5rem + var(--page-width-margin));
  }

  .spaced-section:last-child {
    margin-bottom: calc(5rem + var(--page-width-margin));
  }
}

.spaced-section--full-width + .spaced-section--full-width {
  margin-top: 0;
}

.spaced-section--full-width:first-child {
  margin-top: 0;
}

.spaced-section--full-width:last-child {
  margin-bottom: 0;
}

.grid-auto-flow {
  display: grid;
  grid-auto-flow: column;
}

.page-margin,
.shopify-challenge__container {
  margin: 7rem auto;
}

.rte-width {
  max-width: 82rem;
  margin: 0 auto 2rem;
}

.list-unstyled {
  margin: 0;
  padding: 0;
  list-style: none;
}

.hidden {
  display: none !important;
}

.visually-hidden {
  position: absolute !important;
  overflow: hidden;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  clip: rect(0 0 0 0);
  word-wrap: normal !important;
}

.visually-hidden--inline {
  margin: 0;
  height: 1em;
}

.overflow-hidden {
  overflow: hidden;
}

.skip-to-content-link:focus {
  z-index: 9999;
  position: inherit;
  overflow: auto;
  width: auto;
  height: auto;
  clip: auto;
}

.full-width-link {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 2;
}

p,
.text-body,
 .frye-body {
  font-size: calc(var(--font-body-scale) * 1.5rem);
  letter-spacing: normal;
  line-height: 1.8;
  font-family: var(--font-body-family);
  font-style: var(--font-body-style);
  font-weight: var(--font-body-weight);
}

.text-body-small,
 .frye-body-small {
  font-size: 1.3rem !important;
  line-height: 1.8 !important;
  letter-spacing: normal !important;
  font-family: var(--font-body-family);
  font-style: var(--font-body-style);
  font-weight: var(--font-body-weight);
}

.text-body-medium {
  font-size: 1.4rem !important;
  line-height: 2.6rem !important;
  letter-spacing: normal !important;
  font-family: var(--font-body-family);
  font-style: var(--font-body-style);
  font-weight: var(--font-body-weight);
}

@media only screen and (min-width: 750px) {
  .text-body-medium {
    font-size: 1.7rem !important;
    line-height: 2.7rem !important;
  }
}

.text-body-large {
  font-size: 2.4rem !important;
  line-height: 3.7rem !important;
  letter-spacing: normal !important;
  font-family: var(--font-body-family);
  font-style: var(--font-body-style);
  font-weight: var(--font-body-weight);
}

@media only screen and (min-width: 750px) {
  .text-body-large {
    font-size: 3.2rem !important;
    line-height: 4.5rem !important;
  }
}

h1,
h2,
h3,
h4,
h5,
h6,
.h0,
.h1,
.h2,
.h3,
.h4,
.h5,
.h6 {
  font-family: var(--font-heading-family);
  font-style: var(--font-heading-style);
  font-weight: var(--font-heading-weight);
  letter-spacing: calc(var(--font-heading-scale) * 0.06rem);
  line-height: calc(1 + 0.15 / max(1, var(--font-heading-scale)));
}

.h0,
 .frye-headline-0 {
  font-size: calc(var(--font-heading-scale) * 4.5rem);
  font-family: var(--font-heading-family);
  line-height: 5rem;
}

@media only screen and (min-width: 750px) {
 .h0,
  .frye-headline-0 {
    font-size: calc(var(--font-heading-scale) * 8rem);
  }
}

h1,
.h1 {
  font-size: calc(var(--font-heading-scale) * 3.4rem);
  letter-spacing: 0.2rem;
}

@media only screen and (min-width: 750px) {
  h1,
  .h1 {
    font-size: calc(var(--font-heading-scale) * 4.2rem);
    letter-spacing: 0.256rem;
  }
}

@media only screen and (min-width: 990px) {
  h1,
  .h1 {
    font-size: calc(var(--font-heading-scale) * 5.2rem);
  }
}

.frye-headline-1 {
  font-size: calc(var(--font-heading-scale) * 4rem);
  font-family: var(--font-heading-family);
  line-height: 4rem;
  letter-spacing: normal;
}

@media only screen and (min-width: 750px) {
  .frye-headline-1 {
    font-size: calc(var(--font-heading-scale) * 5.5rem);
    letter-spacing: -0.11rem;
  }
}

@media only screen and (min-width: 990px) {
  .frye-headline-1 {
    font-size: calc(var(--font-heading-scale) * 6rem);
  }
}

h2,
.h2 {
  font-size: calc(var(--font-heading-scale) * 2.8rem);
}

@media only screen and (min-width: 750px) {
  h2,
  .h2 {
    font-size: calc(var(--font-heading-scale) * 3.6rem);
  }
}

@media only screen and (min-width: 990px) {
  h2,
  .h2 {
    font-size: calc(var(--font-heading-scale) * 4.2rem);
  }
}

.frye-headline-2 {
  font-size: calc(var(--font-heading-scale) * 3.5rem);
  font-family: var(--font-heading-family);
  line-height: 0.95;
}

@media only screen and (min-width: 750px) {
  .frye-headline-2 {
    font-size: calc(var(--font-heading-scale) * 4rem);
  }
}

h3,
.h3 {
  font-family: var(--font-body-family);
  font-size: calc(var(--font-heading-scale) * 2.4rem);
}

@media only screen and (min-width: 750px) {
  h3,
  .h3 {
    font-size: calc(var(--font-heading-scale) * 2.6rem);
  }
}

@media only screen and (min-width: 990px) {
  h3,
  .h3 {
    font-size: calc(var(--font-heading-scale) * 3.2rem);
  }
}
/* ... */

